--- a/NetVampiro/TODO
+++ b/NetVampiro/TODO
@@ -152,7 +152,7 @@ Not implemented:
  - PoRE (see later)
 
 
-(1) [PoRE] Potentially release error checking tool:
+(1) Potentially release error checking tool:
     All time check before release:
     (A) all "catch (java.lang.InterruptedException e) {" need same code including 
         into "catch (System.Threading.ThreadInterruptedException e){"
@@ -166,43 +166,45 @@ String formatting:
 String.format ("Optional[%s]",value); ==> String.Format("Optional[{0}]", value);
 
 
+google-robotstxt-java:
+😎 compileable
 
 Sleep 2.1: 
-java.lang.Class.instanceof, 
-java.lang.Math.asin atan atan2 log pow round tan toRadians toDegrees exp
-java.lang.reflect.Constructor, 
-java.lang.reflect.InvocationHandler
-java.lang.reflect.Proxy
-java.lang.reflect.Method.setAccessible
-java.security.DigestOutputStream
-java.io.File.listRoots
-java.io.File.setReadOnly
-java.io.File.setLastModified
-java.io.File.mkdirs
-java.io.File.getParentFile
-java.lang.Thread.join
-java.lang.isJavaIdentifierPart
-java.lang.Process.getInputStream
-java.lang.Process.getOutputStream
-java.lang.Process.exitValue
-java.net.Socket.getInetAddress().getHostAddress()
-java.net.Socket.connect
-java.net.Socket.bind
-java.net.Socket.new()
-java.net.ServerSocket.setSoTimeout
-java.net.ServerSocket(x,y,z)
-java.net.Socket.setSoLinger
-java.lang.Long.decode
-java.util.regex.Pattern.compile
-java.util.Array.set
-java.util.Hashtable.new(int)
-java.security.DigestOutputStream
-java.security.DigestInputStream
-javax.script.ScriptException
-javax.script.ScriptEngine.FILENAME
-javax.script.ScriptEngine.ARGV
-javax.script.ScriptContext.getBindings()
-javax.script.ScriptContext.ENGINE_SCOPE
+😭 java.lang.Class.instanceof, 
+😭 java.lang.Math.asin atan atan2 log pow round tan toRadians toDegrees exp
+😭 java.lang.reflect.Constructor, 
+😭 java.lang.reflect.InvocationHandler
+😭 java.lang.reflect.Proxy
+😭 java.lang.reflect.Method.setAccessible
+😭 java.security.DigestOutputStream
+😭 java.io.File.listRoots
+😭 java.io.File.setReadOnly
+😭 java.io.File.setLastModified
+😭 java.io.File.mkdirs
+😭 java.io.File.getParentFile
+😭 java.lang.Thread.join
+😭 java.lang.Character.isJavaIdentifierPart
+😭 java.lang.Process.getInputStream
+😭 java.lang.Process.getOutputStream
+😭 java.lang.Process.exitValue
+😭 java.net.Socket.getInetAddress().getHostAddress()
+😭 java.net.Socket.connect
+😭 java.net.Socket.bind
+😭 java.net.Socket.new()
+😭 java.net.ServerSocket.setSoTimeout
+😭 java.net.ServerSocket(x,y,z)
+😭 java.net.Socket.setSoLinger
+😭 java.lang.Long.decode
+😭 java.util.regex.Pattern.compile
+😭 java.util.Array.set
+😭 java.util.Hashtable.new(int)
+😭 java.security.DigestOutputStream
+😭 java.security.DigestInputStream
+😭 javax.script.ScriptException
+😭 javax.script.ScriptEngine.FILENAME
+😭 javax.script.ScriptEngine.ARGV
+😭 javax.script.ScriptContext.getBindings()
+😭 javax.script.ScriptContext.ENGINE_SCOPE
 
 extension method for java.lang-number types Double.parseDouble() => Double.Parse()
 extension methods for Type like Class, 
